# skshieldus-minipj3-team5

./: .gitignore  README.md  docker-compose.yml  main.py  new_ver.ipynb  new_ver.py  package-lock.json  package.json  pod-frontend-5c787d75cf-7dhwt.yaml  project_langchain.ipynb  pyproject.toml  tailwind.config.js
backend/: .gitignore  Dockerfile  pom.xml
backend/demo/: pom.xml
docs/: API 설계서.md  Backend 개발 명세서.md  Frontend 개발 명세서.md  데이터베이스 설계서.md  시스템 아키텍처 설계서.md  컨테이너 배포 가이드.md  프로젝트 계획서.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
k8s/: deployment-backend.yaml  deployment-frontend.yaml  deployment-langchain.yaml  deployment-redis.yaml  namespace.yaml  pvc-langchain.yaml  rolebinding.yaml  secret-openai.yaml  service-backend.yaml  service-frontend.yaml  service-langchain.yaml  service-redis.yaml
langchain/: .dockerignore  Dockerfile  backend_api.py  backend_api_file.py  backend_api_js.py  file_prompt_analysis.ipynb  mp3_test.ipynb  project_langchain.ipynb  requirements.txt
langchain/data/: resume.txt  개인맞춤질문_ABC 주식회사_선임 개발자_20250707_151253.txt  기술면접_ABC 주식회사_선임 개발자_중급_15개_20250707_172445.txt  면접질문_네이버_백엔드 개발자.txt  면접질문_카카오_개발자_경력_20250707_095532.txt
langchain/ipynb/: file_prompt_analysis.ipynb  test.ipynb
langchain/py/: backend_api.py  main.py  personal_question_maker.py  personal_question_maker2.py  (+1 more)
src/: App.jsx  index.css
temp_downloads/: 기술면접_카카오_백엔드개발자_20250708_173345.txt  면접질문_카카오_백엔드 개발자_20250708_153331.txt
(+91 files in other folders)
