[project]
name = "skshieldus-minipj3-team5"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "gradio (>=5.35.0,<6.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "langchain-core (>=0.3.68,<0.4.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "selenium (>=4.34.0,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "unstructured (>=0.18.3,<0.19.0)",
    "fastapi (>=0.116.0,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pypdf (>=5.7.0,<6.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

